objects/LLC_BI__Id_Document_Requirement__c.object
<CustomObject>
    <description>Configure the total required documents for each relationship type.</description>
    <fields>
        <fullName>LLC_BI__Relationship_Type__c</fullName>
        <description>This field is required to configure ID documents for New Customer Onboarding. It indicates the relationship type to establish an ID Document requirement for.</description>
        <label>Relationship Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Documents_Required__c</fullName>
        <description>This field is required to configure ID documents for New Customer Onboarding. It indicates the total number of documents required for the relationship type.</description>
        <label>Total Documents Required</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Id Document Requirement</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Relationship_Type__c</columns>
        <columns>LLC_BI__Total_Documents_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-DOC-REQUIRE-{000000}</displayFormat>
        <label>Id Document Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Id Document Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>